# CrawJUD-Legacy

./: .bandit  .copilot-commit-message-instructions.md  .dockerignore  .editorconfig  .env.vault  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .pre-commit.hooks.yaml  .prettierrc  .version  CODE_OF_CONDUCT.md  Dockerfile  PULL_REQUEST_DESCRIPTION.md  README.md  RELEASE_NOTES.md  Readme.md  SECURITY.md  _Dockerfile.windows  _apicrawjud.py  _crawjudapp.py  _initjpype.py  app.py  assign_ps1.cmd  beat.py  celery_app.py  components.d.ts  compose-minio.yaml  compose.yml  count-commits.py  env.d.ts  main.py  package-lock.json  package.json  pnpm-lock.yaml  poetry.loh  poetry.toml  print_message.py  pyproject.toml  pytest.ini  (+13 more)
api-backend/: .gitignore  passlib.conf  pyproject.toml  requirements.txt  ruff.toml
api-backend/.github/: copilot-instructions.md
api-backend/__types/: __init__.py
api-backend/_interfaces/: __init__.py
api-backend/app/: __init__.py  __main__.py  _types.py  export.json  settings.py
api-backend/app/_forms/: __init__.py  file_auth.py  head.py  multiple_files.py  only_auth.py  only_file.py
api-backend/app/base/: __init__.py
api-backend/app/base/_sqlalchemy/: _model.py  _query.py
api-backend/app/config/: settings.yaml
api-backend/app/decorators/: _api.py
api-backend/app/interfaces/: __init__.py
api-backend/app/models/: __init__.py  _bot.py  _execucao.py  _jwt.py  _users.py  export.json
api-backend/app/resources/: __init__.py  _minio.py  extensions.py
api-backend/app/routes/: __init__.py  _auth.py  _bots.py
api-backend/app/routes/_bots/: __init__.py  _pje.py  elaw.py  esaj.py  pje.py  projudi.py
api-backend/app/routes/_root/: __init__.py  auth.py
api-backend/app/routes/auth/: __init__.py
api-backend/app/routes/handlers/: __init__.py
api-backend/app/types/: __init__.py
api-backend/config/: celery.yaml  settings.yaml
api-backend/constants/: __init__.py
task-manager/: .gitignore  _hook.py  pyproject.toml  requirements.txt  ruff.toml
task-manager/.github/: copilot-instructions.md
task-manager/__types/: __init__.py  _custom.py
task-manager/_interfaces/: __init__.py  pje.py
task-manager/_interfaces/_pje/: __init__.py
task-manager/_interfaces/projudi/: __init__.py
task-manager/_json/: varas_pje.json  varas_pje.py
task-manager/_types/: __init__.py  _custom.py
task-manager/app/: __init__.py  __main__.py  app_celery.py
task-manager/app/bots/: __init__.py  head.py
task-manager/app/bots/admin/: __init__.py
task-manager/app/bots/caixa/: __init__.py  emissor.py
task-manager/app/bots/calculadoras/: __init__.py  tjdft.py
task-manager/app/bots/controller/: csi.py  elaw.py  esaj.py  pje.py  projudi.py
task-manager/app/bots/csi/: chamados.py  download_document.py
task-manager/app/bots/elaw/: andamentos.py  download.py  provisao.py
task-manager/app/bots/esaj/: busca_pags.py  emissao.py  movimentacao.py  protocolo.py
task-manager/app/bots/jusbr/: protocolo.py
task-manager/app/bots/jusds/: andamentos.py  prazos.py  realiza_prazo.py
task-manager/app/bots/pje/: capa.py  pauta.py
task-manager/app/bots/projudi/: __init__.py  intimacoes.py  movimentacao.py  proc_parte.py  protocolo.py
task-manager/app/common/: __init__.py  _raises.py  cidades.py
task-manager/app/common/exceptions/: __init__.py  database.py  elaw.py  mail.py
task-manager/app/controllers/: __init__.py  caixa.py  csi.py  elaw.py  esaj.py  head.py  jusbr.py  jusds.py  pje.py  projudi.py
task-manager/app/controllers/main/: __init__.py  _master.py
task-manager/app/custom/: README.md  __init__.py  canvas.py  celery.py  task.py
task-manager/app/decorators/: README.md  __init__.py  bot.py
task-manager/app/decorators/api/: __init__.py  (+1 more)
task-manager/app/interfaces/: __init__.py
task-manager/app/models/: __init__.py  schedule.py  users.py
task-manager/app/resources/: README.md  __init__.py  _varas_dict.py  config_logs_celery.py  formatadores.py
task-manager/app/tasks/: __init__.py  files.py  message.py
task-manager/app/types/: __init__.py  _custom.py
task-manager/app/utils/: README.md  __init__.py  formatadores.py  iterators.py  load_config.py  login_manager.py  pje_savexlsx.py  print_message.py
task-manager/bots/: __init__.py  head.py
task-manager/bots/admin/: __init__.py
task-manager/bots/buscadores/: __init__.py
task-manager/bots/caixa/: __init__.py  emissor.py  master.py
task-manager/bots/calculadoras/: tjdft.py
task-manager/bots/controller/: csi.py  elaw.py  esaj.py  pje.py  projudi.py
task-manager/bots/csi/: chamados.py  download_document.py  master.py
task-manager/bots/elaw/: __init__.py  andamentos.py  download.py  master.py  provisao.py
task-manager/bots/emissao/: __init__.py
task-manager/bots/esaj/: __init__.py  busca_pags.py  emissao.py  master.py  movimentacao.py  protocolo.py
task-manager/bots/jusbr/: __init__.py  master.py  protocolo.py
task-manager/bots/jusds/: andamentos.py  master.py  prazos.py  realiza_prazo.py
task-manager/bots/pje/: __init__.py  capa.py  master.py  pauta.py
task-manager/bots/projudi/: __init__.py  intimacoes.py  master.py  movimentacao.py  proc_parte.py  protocolo.py
task-manager/bots/resources/: __init__.py  _formatadores.py  _print_msg.py  formatadores.py
task-manager/common/: __init__.py  _raises.py
task-manager/common/exceptions/: __init__.py  elaw.py  mail.py
task-manager/config/: __init__.py  settings.yaml
task-manager/const/: __init__.py
task-manager/constants/: __init__.py  webdriver.py
task-manager/constants/data/: __init__.py
task-manager/controllers/: _crawjud.py  _master.py  caixa.py  csi.py  elaw.py  esaj.py  jusbr.py  jusds.py  pje.py  projudi.py
task-manager/resources/: __init__.py  _autenticador.py  _hook.py  _iterator.py  _minio.py  print_message.py  web_element.py
task-manager/resources/elements/: csi.py  elaw.py  pje.py
task-manager/resources/queues/: __init__.py  file_operation.py  head.py  print_message.py
task-manager/tasks/: __init__.py  _bots.py
task-manager/tasks/_bots/: __init__.py  _esaj.py  _pje.py  _projudi.py
(+1314 files in other folders)
