[project]
name = "crawjud"
version = "0.1.0"
description = ""
authors = [{ name = "Robotz213", email = "nicholas@robotz.dev" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "base91>=1.0.1",
    "bcrypt>=5.0.0",
    "browsermob-proxy>=0.8.0",
    "bs4>=0.0.2",
    "celery>=5.5.3",
    "clear>=2.0.0",
    "dotenv>=0.9.9",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "flask-mail>=0.10.0",
    "flask-sqlalchemy>=3.1.1",
    "google-auth>=2.41.1",
    "google-cloud-storage>=3.4.1",
    "httpx>=0.28.1",
    "humanize>=4.13.0",
    "inquirer>=3.4.1",
    "minio>=7.2.18",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pillow>=11.3.0",
    "psutil>=7.1.0",
    "psycopg2>=2.9.11",
    "pypdf==6.1.1",
    "python-magic>=0.4.27",
    "quart-cors>=0.8.0",
    "quart-flask-patch>=0.3.0",
    "quart-jwt-extended>=0.1.0",
    "quart-socketio",
    "redis>=6.4.0",
    "redis-om>=1.0.3b0",
    "selenium>=4.36.0",
    "sqlalchemy>=2.0.44",
    "termcolor>=3.1.0",
    "tqdm>=4.67.1",
    "trio>=0.31.0",
    "webdriver-manager>=4.0.2",
]
# [tool.poetry]
# package-mode = false

# [tool.poetry.group.dev.dependencies]
# pre-commit = "^4.2.0"
# quart-jwt-extended = "^0.1.0"
# numba = "^0.61.2"
# pyjion = {version = "^2.0.0", markers = "python_version == \"3.10\""}
# pytest-asyncio = "^1.1.0"
# coverage = "^7.10.3"
# pytest = "^8.4.1"
# pytest-cov = "^6.2.1"


[tool.coverage.run]
source = ["."]
omit = [
    "utils/webdriver/*",
    "utils/storage/*",
    "utils/logger/*",
    "tests/*",
    "**/__main__.py",
    "crawjud_app/addons/search/**/*",
    "api/common/__init__.py",
    "api/common/exceptions/__init__.py",
]

[tool.uv.sources]
quart-socketio = { git = "https://github.com/Robotz213/Quart-SocketIO.git" }
