[project]
name = "my_project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aether",
    "bcrypt>=5.0.0",
    "blinker==1.9.0",
    "clear==2.0.0",
    "click==8.3.0",
    "colorama==0.4.6",
    "dynaconf[all]>=3.2.11",
    "eventlet>=0.40.3",
    "flask==3.1.2",
    "flask-cors>=6.0.1",
    "flask-jwt-extended>=4.7.1",
    "flask-mail>=0.10.0",
    "flask-socketio>=5.5.1",
    "flask-sqlalchemy==3.1.1",
    "gevent>=25.9.1",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "mdurl==0.1.2",
    "mysql-connector-python==9.4.0",
    "pandas>=2.3.3",
    "pygments==2.19.2",
    "python-dotenv==1.1.1",
    "pyyaml>=6.0.3",
    "pyyaml-env-tag>=1.1",
    "redis>=6.4.0",
    "rich==14.1.0",
    "shellingham==1.5.4",
    "sqlalchemy==2.0.43",
    "termcolor==3.1.0",
    "tqdm==4.67.1",
    "typer==0.19.2",
    "typing-extensions==4.15.0",
    "werkzeug==3.1.3",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.17",
    "pre-commit>=4.3.0",
]

[tool.uv.sources]
aether = { git = "https://github.com/Robotz213/Aether.git", rev = "a55223259116a16a4d7542d7d938b85735607ecc" }
