[project]
name = "my_project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aether",
    "argon2-cffi>=25.1.0",
    "asgiref>=3.10.0",
    "base91>=1.0.1",
    "bcrypt>=5.0.0",
    "blinker==1.9.0",
    "bs4>=0.0.2",
    "celery>=5.5.3",
    "clear==2.0.0",
    "click==8.3.0",
    "colorama==0.4.6",
    "dynaconf[all]>=3.2.11",
    "eventlet>=0.40.3",
    "flask==3.1.2",
    "flask-cors>=6.0.1",
    "flask-jwt-extended>=4.7.1",
    "flask-mail>=0.10.0",
    "flask-socketio>=5.5.1",
    "flask-sqlalchemy==3.1.1",
    "gevent>=25.9.1",
    "gevent-websocket>=0.10.1",
    "httpx>=0.28.1",
    "hypercorn>=0.17.3",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "mdurl==0.1.2",
    "minio>=7.2.18",
    "mysql-connector-python==9.4.0",
    "pandas>=2.3.3",
    "passlib[argon2,bcrypt]>=1.7.4",
    "pillow>=12.0.0",
    "pygments==2.19.2",
    "pypdf>=6.1.1",
    "python-dotenv==1.1.1",
    "pyyaml>=6.0.3",
    "pyyaml-env-tag>=1.1",
    "quart>=0.20.0",
    "redis>=6.4.0",
    "rich==14.1.0",
    "selenium>=4.36.0",
    "selenium-wire>=5.1.0",
    "shellingham==1.5.4",
    "sqlalchemy==2.0.43",
    "termcolor==3.1.0",
    "tqdm==4.67.1",
    "typer==0.19.2",
    "typing-extensions==4.15.0",
    "uvicorn>=0.37.0",
    "werkzeug==3.1.3",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.17",
    "pre-commit>=4.3.0",
]

[tool.uv.sources]
aether = { git = "https://github.com/Robotz213/Aether.git" }
